# donation-alerts-cpp-library

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: daApi.hpp  daType.hpp
src/: daApi.cpp
